bpo-31474: Fix -Wint-in-bool-context warnings

Signed-off-by: Christian Heimes <christian@python.org>